# chat_webapp

./: .env  Cargo.toml  chat.db  chat.db-shm  chat.db-wal  schema.sql
src/: database.rs  main.rs  message.rs  room.rs  user.rs
templates/: index.html  room.html  room_list.html
